--- a/config_template/config_tun.json
+++ b/config_template/config_tun.json
@@ -101,7 +101,7 @@
       { "clash_mode": "direct", "outbound": "🎯 全球直连" },
       { "clash_mode": "global", "outbound": "GLOBAL" },
       { "domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连" },
-      { "port": "9095", "outbound": "🎯 全球直连" },
+      { "port": ["9095", "5000", "3001", "9000"], "outbound": "🎯 全球直连" },
       { "rule_set": ["geosite-private", "geoip-private"], "outbound": "🎯 全球直连" },
       { "rule_set": "adblock", "outbound": "🛑 广告拦截" },
       { "rule_set": "geosite-pt", "outbound": "🎯 全球直连" },
